feat: 商品列表排序和枚举值映射处理